--- a/francaise.html
+++ b/francaise.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class ="header__logo">
-                <img src="images/logo/ohmyfood.png" alt="logo">
+                <img src="images/logo/ohmyfood@2x.svg" alt="logo">
                 <div class="header__logo__arrow">
                     <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
