--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/prefixed/main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
             </div>
         </header>
         <div class="image-bg">
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note_enchantee">
         </div>
         <div class="menu">
             <div class="menu__title">
@@ -30,6 +30,9 @@
                 </h1>
                 <div class="menu__title__heart">
                     <i class="fa-regular fa-heart"></i>
+                    <div class="heart__full">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </div>
             <div class="menu__types">
